--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".cube.CubeActivity1" />
         <activity android:name=".cube.CubeActivity2" />
         <activity android:name=".framebuffer.BufferActivity" />
-        <activity android:name=".audio.AudioRecordActivity"></activity>
+        <activity android:name=".media.audio.AudioRecordActivity"></activity>
     </application>
 
 </manifest>
